--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,6 @@ vignettes/*.pdf
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 
-.DS_Stroe
+.DS_Store
 .Rproj.user
+
