--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ export(build_example)
 export(render)
 importFrom(markdown,markdownToHTML)
 importFrom(rmarkdown,render)
+importFrom(utils,browseURL)
