add pandoc as requirement

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,4 +17,5 @@ Imports:
     rmarkdown
 Suggests:
     testthat
+SystemRequirements: pandoc (>= 1.12.3) - http://johnmacfarlane.net/pandoc
 RoxygenNote: 5.0.1
