adapt settings, update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,7 @@ vignettes/*.pdf
 .DS_Store
 .Rproj.user
 
-# ignore html files that are created while testing out.
-*.html
+# ignore example rmd and html files that are mistakenly not cleaned
+example.html
+example.Rmd
+
