first steps in own vignette engine, first steps in writing vignette

--- a/.gitignore
+++ b/.gitignore
@@ -4,24 +4,18 @@
 
 # Session Data files
 .RData
-
 # Example code in package build process
 *-Ex.R
-
 # RStudio files
 .Rproj.user/
-
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
-
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
-
 .DS_Store
 .Rproj.user
-
 # ignore example rmd and html files that are mistakenly not cleaned
 example.html
 example.Rmd
-
+inst/doc
