another attempt to fix build

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,7 @@ Imports:
     rmarkdown
 Suggests:
     testthat,
-    knitr,
-    rmarkdown
+    knitr
 SystemRequirements: pandoc (>= 1.12.3) - http://johnmacfarlane.net/pandoc
 RoxygenNote: 5.0.1
 VignetteBuilder: tutorial
