disable hardcoded output, adapt travis.yml to try to fix build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: r
 sudo: required
 
-r_check_args: --as-cran --no-tests
+r_github_packages:
+  - datacamp/tutorial
 
 r_packages:
   - covr
