--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,10 +14,10 @@ License: MIT + file LICENSE
 LazyData: TRUE
 Imports:
     markdown,
-    rmarkdown
-Suggests:
-    testthat,
+    rmarkdown,
     knitr
+Suggests:
+    testthat
 SystemRequirements: pandoc (>= 1.12.3) - http://johnmacfarlane.net/pandoc
 RoxygenNote: 5.0.1
 VignetteBuilder: tutorial
