--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 export(build_example)
 export(render)
+importFrom(base64enc,base64encode)
 importFrom(knitr,knit_filter)
 importFrom(markdown,markdownToHTML)
+importFrom(rjson,toJSON)
 importFrom(rmarkdown,render)
 importFrom(utils,browseURL)
