--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,13 +13,14 @@ Description: DataCamp Light (<https://github.com/datacamp/datacamp-light>) is a 
 License: MIT + file LICENSE
 LazyData: TRUE
 Imports:
-    markdown,
-    rmarkdown,
     knitr,
     rjson,
     base64enc
 Suggests:
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 SystemRequirements: pandoc (>= 1.12.3) - http://johnmacfarlane.net/pandoc
 RoxygenNote: 5.0.1
-VignetteBuilder: tutorial
+VignetteBuilder: tutorial,
+    knitr
