--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,9 @@
 
 export(build_example)
 export(go_interactive)
-export(render)
 export(tutorial)
 importFrom(base64enc,base64encode)
-importFrom(knitr,knit_filter)
+importFrom(knitr,knit_hooks)
+importFrom(knitr,opts_hooks)
 importFrom(markdown,markdownToHTML)
 importFrom(rjson,toJSON)
-importFrom(rmarkdown,render)
-importFrom(utils,browseURL)
