add hints again, support for python is later

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(tutorial)
 importFrom(base64enc,base64encode)
 importFrom(knitr,knit_hooks)
 importFrom(knitr,opts_hooks)
+importFrom(knitr,opts_knit)
 importFrom(markdown,markdownToHTML)
 importFrom(rjson,toJSON)
