--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,9 @@ Maintainer: Filip Schouwenaars <filip@datacamp.com>
 URL: https://github.com/datacamp/tutorial
 BugReports: https://github.com/datacamp/tutorial/issues
 Description: DataCamp Light (<https://github.com/datacamp/datacamp-light>) is a light-weight implementation of the DataCamp UI,
-  that allows you to embed interactive exercises inside HTML documents. The 'tutorial' package makes it easy to create these
-  HTML files from R Markdown files. A wrapper around the 'rmarkdown' package, 'tutorial' pre-detects code chunks with the 'ex' and 'type'
-  properties, and replaces the chunks with DataCamp Light readable chunks in the resulting HTML file.
+  that allows you to embed interactive exercises inside HTML documents. The tutorial package makes it easy to create these
+  HTML files from R Markdown files. An extension to knitr, tutorial detects appropriately formatted code chunks and replaces them
+  with DataCamp Light readable chunks in the resulting HTML file.
 License: MIT + file LICENSE
 LazyData: TRUE
 Imports:
